modify code ass3_p2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "stdio_ext.h": "c",
         "array.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "cctype": "c"
     }
 }
