update code Ass 4 P2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "cstdlib": "c",
         "cctype": "c",
         " gemtekmathlib.h": "c",
-        "gemtek_lib.h": "c"
+        "gemtek_lib.h": "c",
+        "string.h": "c"
     }
 }
