--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Assignment_4_1/.vscode/settings.json
 .vscode/settings.json
 .vscode/settings.json
 Assignment_4_2/.vscode/settings.json
+.vscode/settings.json
+.vscode/settings.json
