update code Ass 4 P1

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Assignment_4_1/.vscode/settings.json
 Assignment_4_2/.vscode/settings.json
 .vscode/settings.json
 .vscode/settings.json
+.vscode/settings.json
