--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Assignment_4_2/.vscode/settings.json
 .vscode/settings.json
 .vscode/settings.json
 .vscode/settings.json
+.vscode/settings.json
+Mini_Project/test.c
