init mini project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "gemtek_lib.h": "c",
         "string.h": "c",
         "limits.h": "c",
-        "morse_code.h": "c"
+        "morse_code.h": "c",
+        "stdlib.h": "c"
     }
 }
